# rustic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Plan.md  README.md  config.example.toml  crates.js  help.html  settings.html  src-files.js  test.txt  truc.json
analyser/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
analyser/assets/templates/: index.html
analyser/src/: README.md  fft.rs  lib.rs  loader.rs  magnitudes.rs  main.rs  plot.rs
analyser/src-tauri/: Cargo.toml  tauri.conf.json
analyser/src-tauri/icons/: icon.icns
analyser/src-tauri/src/: README.md  commands.rs  main.rs
analyser/src/components/: README.md  app.rs  audio_visualizer.rs  file_upload.rs  frequency_chart.rs  mod.rs  spectrum_display.rs
analyser/src/utils/: mod.rs
analyser/src/visualization/: README.md  color_maps.rs  frequency.rs  mod.rs  spectrogram.rs  waveform.rs
analyser/static/: index.html
analyser/static/css/: style.css
analyser/static/js/: audio.js
dev/: .gitignore  Bezier test.ipynb  Cargo.toml  Dockerfile  Drum.ipynb  HiHat.ipynb  Log Analyzer.ipynb  ML_PLAN.md  Makefile  README.md  RusticPy2.ipynb  RusticTest.ipynb  TheDecider.ipynb  TheDeciderHPO.ipynb  TheOracle.ipynb  ThePainter.ipynb  TimeWarping.ipynb  TimeWarpingAlt.ipynb  Untitled.ipynb  docker-compose.yml  local_mlflow.sh  pyproject.toml  train_oracle.sh  utils.py
dev/.ipynb_checkpoints/: Drum-checkpoint.ipynb  HiHat-checkpoint.ipynb  Resonance-checkpoint.ipynb  TimeWarping-checkpoint.ipynb  TimeWarpingAlt-checkpoint.ipynb  Untitled-checkpoint.ipynb
dev/bench/: data.js
dev/configs/: base.toml  the_decider.toml  the_oracle.toml  the_painter.toml
dev/configs/legacy/: phase1_dual.toml  phase1_note.toml  phase2_waveform.toml
dev/notebooks/: 0 - ADSR Prediction.ipynb  2 - Note & Waveform Clsasification.ipynb  Autoregressive.ipynb  Resonance.ipynb  RusticTest.ipynb  TimeWarping.ipynb
dev/notebooks/legacy/: 0 - ADSR Prediction.ipynb  1 - Two models architecture.ipynb  Autoregressive.ipynb  RusticML.ipynb
dev/python/rustic/: __init__.py
dev/python/tests/: test_all.py
dev/rustic/: figures.py  filters.py  utils.py
dev/rustic_dev/: __init__.py  figures.py  generator.py  utils.py
dev/rustic_ml/: __init__.py  analysis.py  comparison.py  dataset.py  encoding.py  evaluation.py  loss.py  mlflow_ui.py  training.py
dev/rustic_ml/autoregressive/: __init__.py  dataset.py  generation.py  tokenizer.py  vocab.py
dev/rustic_ml/data/: dataset.py
dev/rustic_ml/evaluation/: __init__.py  analysis.py  comparison.py  figures.py  inference.py
dev/rustic_ml/legacy/: __init__.py  analysis.py  comparison.py  config.py  dataset.py  encoding.py  evaluation.py
dev/rustic_ml/models/: __init__.py  adsr_predictor.py  note_predictor.py  note_waveform_predictor.py
dev/rustic_ml/the_decider/: __init__.py  dataset.py  hpo.py  inference.py  model.py  train.py
dev/rustic_ml/the_oracle/: __init__.py  inference.py  model.py  train.py
dev/rustic_ml/the_painter/: __init__.py  inference.py  model.py  train.py
dev/rustic_ml/training/: __init__.py  loss.py  setup.py  trainer.py
dev/src/: lib.rs
frontend/: ARCHITECTURE.md  Cargo.toml  all.html  index.html  sidebar-items.js
frontend/mapping/: index.html  sidebar-items.js  struct.KeyMapper.html
frontend/prelude/: index.html
frontend/res/shaders/: textured.frag.wgsl  textured.vert.wgsl
frontend/shaders/: shader.wgsl
frontend/src/: app.rs  lib.rs  main.rs  manager.rs  mapping.rs  render.rs  state.rs  translator.rs  vertex.rs  window.rs
frontend/src/attributes/: color.rs  mod.rs
frontend/src/mapping/: key_mapper.rs  keys.rs  mod.rs
frontend/src/render/: mod.rs  quadbuffer.rs  renderer.rs  staging.rs  vertex.rs
frontend/src/scenes/: home.rs  live.rs  main_scene.rs  menu.rs  mod.rs  score.rs  settings.rs  top_menu.rs
frontend/tabs/: index.html  sidebar-items.js  struct.GraphEditorTab.html  struct.LivePlayingTab.html  struct.ScoreEditorTab.html  struct.SettingsTab.html  trait.Tab.html
frontend/widgets/: enum.MessageType.html  enum.ThemeChoice.html  fn._configure_fonts.html  fn.apply_scaling.html  fn.configure_theme.html  index.html  sidebar-items.js  struct.ButtonGroup.html  struct.DataGrid.html  struct.LabeledCombo.html  struct.LabeledSlider.html  struct.SectionContainer.html  struct.StatusMessage.html
rustic/: Cargo.toml  README.md  all.html  constant.APP_ID.html  fn.init_logging.html  fn.start_app.html  index.html  macro.filters!.html  macro.filters.html  macro.note.html  sidebar-items.js  struct.AudioHandle.html  struct.AudioMetrics.html
rustic-keyboard/: Cargo.toml
rustic-keyboard/src/: error.rs  lib.rs  player.rs  row.rs  voices.rs
rustic-lang/: Cargo.toml  LANGUAGE.md
rustic-lang/examples/: custom_instrument.rt  simple_melody.rt
rustic-lang/src/: error.rs  lib.rs  main.rs
rustic-py/: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
rustic-py/docs/: api.md  index.md
rustic-py/scripts/: test_graph.py
rustic-py/src/: lib.rs  registry.rs  render.rs  spec.rs
rustic-toolkit/src-tauri/: Cargo.toml  tauri.conf.json
rustic/app/: enum.AppMode.html  index.html  sidebar-items.js
rustic/audio/: index.html  sidebar-items.js  struct.AudioHandle.html  struct.AudioMetrics.html
rustic/benches/: graph.rs
rustic/core/: index.html  sidebar-items.js
rustic/examples/: README.md  advanced_plotting.rs  audio_merger.rs  audio_pipe.rs  drum_machine.rs  graph_processing.rs  input_test.rs  keyboard_demo.rs  meta_test.rs  multi_kick.rs  one_note.rs  pitch_bend.rs  plot_chord.rs  plot_hihat.rs  plot_kick.rs  plot_snare.rs  score_playback.rs  simple_melody.rs  testing_gui.rs  waveform_plot.rs
rustic/inputs/: index.html
rustic/instruments/: index.html  trait.Instrument.html
rustic/meta/: fn.get_filters.html  fn.get_generators.html  fn.get_sinks.html  index.html  sidebar-items.js  struct.FilterRegistration.html
rustic/prelude/: index.html
rustic/score/: index.html  sidebar-items.js
rustic/src/: README.md  fs.rs  lib.rs  main.rs
rustic/tests/: audio_tests.rs  test_main.rs
(+2859 files in other folders)
