[package]
name = "music"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "input_scale"
path = "src/bin/scale_test.rs"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
colog = "1.3.0"
evdev = "0.12.2"
libc = "0.2.155"
log = "0.4.22"
rand = {version="0.8.5", features = ["small_rng"]}
rodio = "0.17.3"
serde = { version = "1.0.205", features = ["serde_derive"] }
termion = "4.0.2"
threadpool = "1.8.1"
toml = "0.8.19"
winit = "0.30.0"

[dev-dependencies]
pretty_assertions = "1.1.0"
