[package]
name = "rustic"
description = "A tool for music creation on unix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "input"
path = "src/bin/input.rs"

[[bin]]
name = "wave"
path = "src/bin/wave.rs"
required-features = ["plotting"]

[[bin]]
name = "pipe"
path = "src/bin/pipe.rs"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
colog = "1.3.0"
evdev = "0.12.2"
libc = "0.2.155"
log = "0.4.22"
rand = { version = "0.8.5", features = ["small_rng"] }
rodio = "0.17.3"
serde = { version = "1.0.205", features = ["serde_derive"] }
termion = "4.0.2"
threadpool = "1.8.1"
toml = "0.8.19"
winit = "0.30.0"
plotters = { version = "0.3.7", optional = true }
petgraph = "0.6.5"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = "0.4.38"
derive = { path = "derive" }
dyn-clone = "1.0.18"
biquad = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.1.0"

[features]
plotting = ["plotters"]
meta = []               # Allows for meta programming (on the filters notably)
meta2 = []
