[package]
name = "rustic-analyser"
version = "0.1.0"
edition = "2021"
authors = ["Rustic Developer"]
description = "Audio sample analyzer with Tauri interface"

[dependencies]
# Core dependencies
log = "0.4.27"
colog = "1.3.0"
clap = { version = "4.5.32", features = ["derive"] }
gloo-timers = "0.2"

# Audio processing
symphonia = { version = "0.5.4", features = [
    "mp3",
    "flac",
    "wav",
    "ogg",
    "isomp4",
] }
rustfft = "6.2.0"
hound = "3.5.1" # WAV file handling
dasp_signal = "0.11.0" # Digital signal processing
dasp_sample = "0.11.0" # Sample conversion
dasp_frame = "0.11.0" # Frame handling
dasp_window = "0.11.0" # Windowing functions

# Web framework
yew = { version = "0.21.0", features = ["csr"] }
trunk = "0.17.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.39"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = [
    "all",
] }
web-sys = { version = "0.3.66", features = [
    "File",
    "Blob",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "AudioContext",
    "AudioBuffer",
    "AnalyserNode",
    "MediaStreamAudioSourceNode",
    "BiquadFilterNode",
    "OscillatorNode",
    "GainNode",
    "MediaRecorder",
    "MediaStream",
    "MediaStreamConstraints",
    "Navigator",
    "MediaDevices",
    "Window",
    "Document",
] }
js-sys = "0.3.66"

# Visualization
plotters = { version = "0.3.7", features = ["area_series"] }
plotters-canvas = "0.3.0"

# Math and numerical processing
num = "0.4.1"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
statrs = "0.16.0"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"

# Error handling
thiserror = "1.0.57"
anyhow = "1.0.80"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Enable link-time optimization
lto = true
