[project]
name = "rustic-devel"
description = "A development environment for prototyping rustic features"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "typing-extensions>=4.12.2",
    "rustic-py",
]

[project.optional-dependencies]
amd = ["torch>=2.3"]

[tool.uv.sources]
rustic-py = { path = "../rustic-py", editable = true }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"

