[project]
name = "rustic-devel"
description = "A development environment for prototyping rustic features"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "typing-extensions>=4.12.2",
    "rustic-py",
    "librosa>=0.11.0",
    "mlflow>=3.10.1",
    "tqdm>=4.0",
    "torch>=2.10.0",
    "triton-rocm==3.6.0"
]

[tool.uv]
override-dependencies = [
    "pytorch-triton-rocm; python_full_version < '0'",
    "triton; python_full_version < '0'",
]

[tool.uv.sources]
rustic-py = { path = "../rustic-py", editable = true }
torch = [{ index = "pytorch-rocm" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]
triton-rocm = [{ index = "pytorch-rocm" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

