[project]
name = "rustic-devel"
description = "A development environment for prototyping rustic features"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.2.0"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "typing-extensions>=4.12.2",
    "rustic-py",
    "librosa>=0.11.0",
    "mlflow>=3.10.1",
    "tqdm>=4.0",
]

[project.scripts]
rustic-train = "rustic_ml.cli.train:main"
rustic-generate = "rustic_ml.cli.generate:main"

[project.optional-dependencies]
rocm = [
    "torch>=2.4.0,<2.5.0",
]
# cuda: torch is installed post-sync via `make sync-cuda`
# uv cannot lock the same package from two different explicit indexes,
# so torch for CUDA (cu124) is managed outside the lockfile.
cuda = []

[tool.uv]
override-dependencies = [
    "pytorch-triton-rocm; python_full_version < '0'",
    "triton; python_full_version < '0'",
]

[tool.uv.sources]
rustic-py = { path = "../rustic-py", editable = true }
torch = { index = "pytorch-rocm", extra = "rocm" }

[tool.setuptools.packages.find]
include = ["rustic_ml*"]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.1"
explicit = true

