[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "24.0.3"
rustic = { path = "../rustic", features = ["meta"] }
pollster = "0.4.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
