[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.10"
log = "0.4"
winit = { version = "0.29", features = ["rwh_05"] }
rustic = { path = "../rustic", features = ["meta"] }
pollster = "0.4.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
wgpu_glyph = "0.23.0"
wgpu = "23.0.1"
cgmath = "0.18.0"
