[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
colog = "1.3.0"
log = "0.4"
rustic = { path = "../rustic", features = ["meta"], default-features = false }
serde = "1.0.219"
toml = "0.8.22"

# Egui dependencies
egui = "0.26.2"
eframe = "0.26.2"

# Keyboard input handling
device_query = "1.1.3"
