[package]
name = "rustic-keyboard"
description = "Keyboard instrument and input handling for Rustic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "live"
path = "src/bin/live.rs"
required-features = ["input"]

[dependencies]
rustic = { path = "../rustic" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
evdev = { version = "0.12.2", optional = true }

[features]
input = ["evdev"]
linux = ["input"]
default = []
