[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rustic-py"
version = "0.1.1"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "maturin>=1.5,<2.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
    "mike>=2.0",
]
test = [
    "matplotlib>=3.9.4",
]

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"

