[package]
name = "rustic"
description = "Rustic; a UNIX Symphony Tool Implemented in Code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustic"
path = "./src/main.rs"

[[bin]]
name = "input"
path = "./src/bin/input.rs"
required-features = ["input"]

[[bin]]
name = "keyboard"
path = "./src/bin/keyboard.rs"
required-features = ["input"]

[[bin]]
name = "test_meta"
path = "./src/bin/test_meta.rs"
required-features = ["meta"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
colog = "1.3.0"
directories = "6.0.0"
dyn-clone = "1.0.18"
evdev = { version = "0.12.2", optional = true }
log = "0.4.22"
petgraph = "0.6.5"
plotters = { version = "0.3.7", optional = true }
plotters-backend = { version = "0.3.7", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
rodio = "0.17.3"
rustic-derive = { path = "../rustic-derive", optional = true }
rustic-meta = { path = "../rustic-meta", optional = true }
serde = { version = "1.0.205", features = ["derive", "serde_derive"] }
thiserror = "2.0.12"
toml = "0.8.19"

[dev-dependencies]
pretty_assertions = "1.1.0"

[features]
plotting = ["plotters", "plotters-backend"]
meta = ["rustic-derive", "rustic-meta"]
linux = ["evdev"]
macos = []
windows = []
