[package]
name = "rustic"
description = "Rustic; a UNIX Symphony Tool Implemented in Code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustic"
path = "./src/main.rs"

[dependencies]
atomic_float = "0.1"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
cpal = "0.15.3"
crossbeam = "0.8"
directories = "6.0.0"
dyn-clone = "1.0.18"
eframe = { version = "0.29", optional = true }
evdev = { version = "0.12.2", optional = true }
log = "0.4.22"
petgraph = "0.6.5"
plotters = { version = "0.3.7", optional = true }
plotters-backend = { version = "0.3.7", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
rodio = "0.17.3"
rustic-derive = { path = "../rustic-derive", optional = true }
rustic-meta = { path = "../rustic-meta", optional = true }
serde = { version = "1.0.205", features = ["derive", "serde_derive"] }
simple-log = "2.4.0"
simplelog = "0.12.2"
thiserror = "2.0.12"
toml = "0.8.19"

[dev-dependencies]
pretty_assertions = "1.1.0"

[features]
default = []
plotting = ["plotters", "plotters-backend"]
meta = ["rustic-derive", "rustic-meta"]
testing = ["eframe"]
input = ["evdev"]
linux = ["input"]
macos = []
windows = []
