[package]
name = "analyser-tauri"
version = "0.1.0"
description = "Audio sample analyzer with Tauri interface"
authors = ["Rustic Developer"]
license = "MIT"
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
colog = "1.3.0"
clap = { version = "4.5.32", features = ["derive"] }
anyhow = "1.0.80"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }

# Audio processing
symphonia = { version = "0.5.4", features = [
    "mp3",
    "flac",
    "wav",
    "ogg",
    "isomp4",
] }
rustfft = "6.2.0"
hound = "3.5.1"
dasp_signal = "0.11.0"
dasp_sample = "0.11.0"
dasp_frame = "0.11.0"
dasp_window = "0.11.0"

# Visualization
plotters = { version = "0.3.7", features = ["area_series"] }

# Math and numerical processing
num = "0.4.1"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
statrs = "0.16.0"
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2.4.4"
tauri-plugin-process = "2.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
