[package]
name = "rustic-toolkit"
version = "1.0.0"
description = "The rustic toolkit, a collection of tools to analyse audio, build graphs and test filters"
authors = ["Minigrim0"]
edition = "2024"

[lib]
name = "rustic_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rustic = { path = "../../rustic", features = ["meta", "ts"] }
rustic-meta = { path = "../../rustic-meta" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.3.0"
log = "0.4.27"
simplelog = "0.12"
directories = "6"
toml = "0.8"
symphonia = { version = "0.5.4", features = [
    "mp3",
    "flac",
    "wav",
    "ogg",
    "isomp4",
] }
rustfft = "6.2.0"
hound = "3.5.1" # WAV file handling
tempfile = "3.20.0"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
thiserror = "2.0.18"
